--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ body {
     font-weight: 300;
     font-size: 16px;
     color: #555;
-    padding-top: 50px;
+    /*padding-top: 50px;*/
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
